@@ -40,7 +40,7 @@ namespace kt
 	{
 		setupUi(this);
 		model = new ChunkDownloadModel(this);
-		QSortFilterProxyModel* pm = new QSortFilterProxyModel(this);
+		pm = new QSortFilterProxyModel(this);
 		pm->setSourceModel(model);
 		pm->setSortRole(Qt::UserRole);
 		m_chunk_view->setModel(pm);
@@ -68,7 +68,8 @@ namespace kt
 		if (!curr_tc)
 			return;
 
-		model->update();
+		if (model->update())
+			pm->invalidate();
 
 		const TorrentStats & s = curr_tc->getStats();
 		m_chunks_downloading->setText(QString::number(s.num_chunks_downloading));
