@@ -45,7 +45,11 @@ namespace kt
 		/// A peer has been removed
 		void peerRemoved(bt::PeerInterface* peer);
 		
-		void update();
+		/**
+		 * Update the model
+		 * @return true if the view needs to be sorted again
+		 */
+		bool update();
 		
 		void clear();
 
